# swagger-output.json
@@ -2,7 +2,7 @@
   "swagger": "2.0",
   "info": {
     "title": "E-commerce API",
-    "description": "A simple CRUD API for managing e-commerce operations",
+    "description": "A simple CRUD API for managing products, orders, and inventory",
     "version": "1.0.0"
   },
   "host": "localhost:3000",
@@ -15,7 +15,7 @@
       "type": "apiKey",
       "name": "Authorization",
       "in": "header",
-      "description": "Enter your bearer token in the format **Bearer <token>**"
+      "description": "Enter token as **Bearer <JWT>**"
     }
   },
   "paths": {
@@ -78,7 +78,7 @@
                 "email": {
                   "example": "any"
                 },
-                "passwordHash": {
+                "password": {
                   "example": "any"
                 }
               }
@@ -88,9 +88,6 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
           }
         }
       }
@@ -279,9 +276,22 @@
       },
       "get": {
         "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           }
         }
       }
@@ -352,11 +362,22 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
           }
         ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           },
           "404": {
             "description": "Not Found"
